# trading_agents

./: .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml
agents/: analysis_agent.py  base_agent.py  chart_agent.py  discovery_agent.py  news_agent.py  orchestrator.py  trading_agent.py
brokers/: webull.py
core/: config.py  message_bus.py  models.py  notifications.py  notifier.py
tests/: test_models.py
