[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-agents"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "playwright>=1.47.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "pandas>=2.0",
    "webull>=0.3.12",
    "tenacity>=9.0",
    "yfinance>=0.2.40",
    "httpx>=0.27.0",
    "winotify>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.setuptools.packages.find]
include = ["agents*", "brokers*", "core*", "platforms*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
